--- a/MaquetteSite/css/style.css
+++ b/MaquetteSite/css/style.css
@@ -27,6 +27,9 @@ body, p, h1, ul, li{
 #categorie{
     position: fixed;    
 }
+#categorie>ul{
+    margin-top: 10px;
+}
 #contenu{
     margin-left: 20%;
 }
@@ -35,6 +38,15 @@ body, p, h1, ul, li{
 }
 #categorieNav h2{
     color: white;
+}
+#logoNav{
+    width: 75px;
+    margin-top: -9px;
+}
+#btnConnection{
+    color: white;
+    line-height: 34px;
+    font-size: 1.5em;
 }
 @media (max-width: 990px) {
     #categorie {
