--- a/MaquetteSite/css/style.css
+++ b/MaquetteSite/css/style.css
@@ -84,5 +84,18 @@ body, p, h1, ul, li{
     #categorie{
         display: none;
     }
+}article{
+    height: 33em ;
 }
+
+article img{
+    min-width: 95% ;
+    min-height: 75%;
+    width: 95% ;
+    height:  75% ;
+    max-width:95% ;
+    max-height: 75% ;
+    
+}
+
 
