ajout d'une texture de fond

--- a/MaquetteSite/css/style.css
+++ b/MaquetteSite/css/style.css
@@ -3,6 +3,9 @@ body, p, h1, ul, li{
     padding : 0;
     
 }
+body{
+    background-image: url('/res/texture.png')
+}
 #page {
     margin: 0 !important ;
     margin-top: 75px !important ;
