--- a/server/src/main/webapp/css/style.css
+++ b/server/src/main/webapp/css/style.css
@@ -3,6 +3,12 @@ body, p, h1, ul, li{
     padding : 0;
     
 }
+body{
+    background-image: url(../res/texture.png) ;
+}
+#carousel-example-generic{
+    background-color: white ;
+}
 #page {
     margin: 0 !important ;
     margin-top: 75px !important ;
@@ -19,9 +25,10 @@ body, p, h1, ul, li{
 #catalogue{
     margin-top: 25px ;
     border : 1px solid grey ;
-    border-radius: 2px ;
+    border-radius: 5px ;
     padding: 20px ;
     text-align: center;
+    background-color: aliceblue;
 }
 
 #categorie{
