--- a/server/src/main/webapp/css/style.css
+++ b/server/src/main/webapp/css/style.css
@@ -38,7 +38,7 @@ body{
 #categorie>ul{
     margin-top: 10px;
 }
-#contenu{
+#contenu, #ContenuLogin, #contenuContact{
     margin-left: 20%;
 }
 #categorieNav{
