--- a/server/src/main/webapp/css/style.css
+++ b/server/src/main/webapp/css/style.css
@@ -69,7 +69,11 @@ body{
 }
 #ContenuLogin label{
    
+}section{
+    min-height: 500px  !important ;
 }
+
+
 #validation{
     
     margin-top: 25px ;
