--- a/server/src/main/webapp/css/style.css
+++ b/server/src/main/webapp/css/style.css
@@ -30,7 +30,6 @@ body{
     text-align: center;
     background-color: aliceblue;
 }
-
 #categorie{
     position: fixed;  
     padding-left: 15px;
@@ -41,7 +40,7 @@ body{
 #contenu, #ContenuLogin, #contenuContact, #contenuAjout{
     margin-left: 20%;
 }
-#categorieNav{
+#categorieNav, .panel-warning{
     display: none;
 }
 #categorieNav h2{
