--- a/server/src/main/webapp/css/style.css
+++ b/server/src/main/webapp/css/style.css
@@ -50,7 +50,7 @@ body{
     width: 75px;
     margin-top: -9px;
 }
-#btnConnection{
+#btnConnection, #btnProfil{
     color: white;
     line-height: 34px;
     font-size: 1.5em;
