gestion du role admin nickel

--- a/server/src/main/webapp/css/style.css
+++ b/server/src/main/webapp/css/style.css
@@ -55,7 +55,9 @@ body{
     line-height: 34px;
     font-size: 1.5em;
 }
-
+.ajouterArticle{
+    display:none;
+}
 #ContenuLogin, #contenuContact, #contenuAjout , #contenuCompte{
     display: none;
 }
