--- a/server/src/main/webapp/css/style.css
+++ b/server/src/main/webapp/css/style.css
@@ -89,7 +89,7 @@ footer {
 #contenuCompte,
 #creerCompte,
 .creerCompte,
-.ajouterArticle {
+.ajouterArticle,#descritpion {
     display: none;
 }
 
